Bug 1872863 - Part 1. Ignore error of GetInlineSpellCheckek. r=masayuki

GeckoView disables spell checker. When disabling it and contenteditable
attribute is changed, we may not initialize editor.

So we should ignore an error of spell check.

Differential Revision: https://phabricator.services.mozilla.com/D202408